# heed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
heed/: __init__.py  __main__.py  base.py  config.py  ingest.py  security.py  storage.py
heed/sinks/: __init__.py  base.py  github.py  store.py
misc/docs/: README.md  design.md  research-report.md
tests/: test_base.py  test_basic.py  test_ingest.py  test_sinks.py
